testsuite/tests/contrib/lkt_semantic/erroneous_component_access/test.lkt
@invalid fun test(a: Int): Cls

val a: Int = test(12).a
